daily-metrics-card: fix header to work on mobile
The daily metrics card header didn't work on mobile since much of the
dom was removed when moving the inputs into the filter bar at the top.

--- a/src/components/insights-space-detail-daily-metrics-card/_styles.scss
+++ b/src/components/insights-space-detail-daily-metrics-card/_styles.scss
@@ -18,28 +18,74 @@
   padding-bottom: 20px;
 }
 
-// On mobile, break the pickers to a second row. On a computer, put them all in one row.
-.insights-space-detail-daily-metrics-card-header-container {
+// START DAILY METRICS CARD HEADER
+
+// "mobile mode" layout
+// title              refresh-button.mid
+// metric-picker (refresh-button.end hidden)
+
+// "desktop mode" layout
+// title (refresh-button.mid hidden) metric-picker refresh-button.end
+
+.card .insights-space-detail-daily-metrics-card-header {
   display: flex;
   flex-direction: column;
+  align-items: normal;
+
+  // When in "mobile mode", adjust the size to be smaller
+  height: 70px;
+  padding-top: 35px;
+
   @media (min-width: $screen-sm-min) {
     flex-direction: row;
+    align-items: center;
+
+    // Reset the values set previously to their default values.
+    height: 18px;
+    padding-top: 30px;
   }
 }
-.insights-space-detail-daily-metrics-card-header-label {
-  line-height: 43px;
-  flex: 1;
+.insights-space-detail-daily-metrics-card-metric-picker {
+  .input-box { color: $gray-cinder; }
+  margin-top: 15px;
+
+  // Work around an issue where the z-index of the info popup was below the z-index of the select
+  // box, which on small width screens made the select box show above the popup when their bounding
+  // boxes intersect.
+  position: relative;
+  z-index: -100;
+
+  @media (min-width: $screen-sm-min) {
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: 20px;
+  }
 }
-.insights-space-detail-daily-metrics-card-header-label .info-popup-container { margin-left: 4px; }
-.insights-space-detail-daily-metrics-card-header-controls {
+
+.insights-space-detail-daily-metrics-card-title {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
-.insights-space-detail-daily-metrics-card-metric-picker {
+
+// There are two "refresh buttons" in the dom - one in the middle, and one at the end.
+// The one in the middle is shown in "mobile mode", as it's in an optimal position to flow to the
+// end of the row when the select box is wrapped to the column below. The one at the end is shown in
+// "desktop mode", which makes sense when the select box isn't wrapped to the next line.
+.insights-space-detail-daily-metrics-card-refresh.mid {
   margin-left: auto;
-  margin-right: 20px;
-  .input-box { color: $gray-cinder; }
+  @media (min-width: $screen-sm-min) {
+    display: none;
+  }
 }
+.insights-space-detail-daily-metrics-card-refresh.end {
+  display: none;
+  @media (min-width: $screen-sm-min) {
+    display: inline-block;
+  }
+}
+
+// END DAILY METRICS CARD HEADER
 
 
 // Horizontally and vertically center errors and info messages in the daily metrics card.
@@ -77,6 +123,13 @@
 }
 
 
-.insights-space-detail-daily-metrics-card-popup-ul li {
-  margin-bottom: 10px;
+.insights-space-detail-daily-metrics-card-popup-ul {
+  line-height: 20px;
+  padding-left: 20px;
+  li { margin-bottom: 10px; }
+}
+.insights-space-detail-daily-metrics-card-popup-p {
+  line-height: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
